Fix disc list marker z-index

--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -106,7 +106,7 @@ article ul {
      background: $blue130;
      border-radius: 54%;
      position: absolute;
-     z-index: 200;
+     z-index: 100;
      left: -15px;
      top: 10px;
      text-align: center;
